Bug 599198 - Content process throws several catastrophic assertions while initializing XPCOM (bandaide) r=bsmedberg a=blocking-fennec